eks-cluster-ec2/k8s-files/network-policy/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    env: dev
