eks-cluster-ec2/k8s-files/network-policy/development/default-network-policy.yaml
# default deny in the development namespace to block all traffic

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: development
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
